toList changed to collectors.toList